--- a/app/src/main/res/layout/content_memes_screen.xml
+++ b/app/src/main/res/layout/content_memes_screen.xml
@@ -4,14 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <ImageView
-        android:layout_width="419dp"
-        android:layout_height="251dp"
-        android:layout_marginBottom="480dp"
-        android:res="meme_1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="-4dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:res="drawable.App/meme_1"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
